--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,13 +5,16 @@
 
 version: 2
 updates:
-  - package-ecosystem: "nuget" # See documentation for possible values
+  - package-ecosystem: "nuget" 
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
-
-  - package-ecosystem: "npm" # See documentation for possible values
+    open-pull-requests-limit: 25
+  
+  # Configuration for npm
+  - package-ecosystem: "npm" 
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 25
 
