--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,17 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 50
+    ignore:
+      # Ignore updates to packages that start with 'aws'
+      # Wildcards match zero or more arbitrary characters
+      - dependency-name: "Microsoft.FeatureManagement.AspNetCore*"
+      # Ignore some updates to the 'express' package
+      - dependency-name: "Microsoft.VisualStudio.Web.CodeGeneration.Design"
+        # Ignore only new versions for 4.x and 5.x
+        versions: ["7.x"]
+      # For all packages, ignore all patch updates
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
   
   # Configuration for npm
   - package-ecosystem: "npm" 
@@ -17,4 +28,5 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 50
+   
 
