--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,11 +10,18 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 50
+    update:
+      - dependency-name: "Selenium.WebDriver.ChromeDriver"
+        versions: ["113.0.5672.2400⁠"]
     ignore:
       # Ignore updates to packages that start with 'Wildcards'
       - dependency-name: "Microsoft.FeatureManagement.AspNetCore*"
       # Ignore some updates to the package
       - dependency-name: "Microsoft.VisualStudio.Web.CodeGeneration.Design"
+        versions: ["7.x"]
+      - dependency-name: "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
+        versions: ["7.x"]
+      - dependency-name: "Microsoft.AspNetCore.Mvc.Testing"
         versions: ["7.x"]
       # For all packages, ignore all patch updates
       #- dependency-name: "*"
