--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,26 +9,35 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
-    open-pull-requests-limit: 50
+    open-pull-requests-limit: 2
+    target-branch: "ci_nuget_upgrade_master"
     ignore:
       # Ignore updates to packages that start with 'Wildcards'
       - dependency-name: "Microsoft.FeatureManagement.AspNetCore*"
       # Ignore some updates to the package
       - dependency-name: "Microsoft.VisualStudio.Web.CodeGeneration.Design"
-        versions: ["7.0"]
+        versions: ["7.*"]
       - dependency-name: "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
-        versions: ["7.0"]
+        versions: ["7.*"]
       - dependency-name: "Microsoft.AspNetCore.Mvc.Testing"
-        versions: ["7.0"]
+        versions: ["7.*"]
+      - dependency-name: "Selenium.WebDriver.ChromeDriver"
+        versions: ">=113.0.5672.1278" # Recommended version
       # For all packages, ignore all patch updates
       #- dependency-name: "*"
       #  update-types: ["version-update:semver-patch"]
+    #labels:
+    #  - "nuget update dependabot"
+    #  - "dependencies"
   
   # Configuration for npm
   - package-ecosystem: "npm" 
     directory: "/DigitalLearningSolutions.Web/" # Location of package manifests
     schedule:
       interval: "daily"
-    open-pull-requests-limit: 50
-   
-
+    target-branch: "ci_npm_upgrade_master"
+    # Labels on pull requests for version updates only
+    #labels:
+    #  - "npm update dependabot"
+    #  - "dependencies"
+    open-pull-requests-limit: 2
