--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 3
-    target-branch: "ci_nuget_upgrade_master"
+    #target-branch: "ci_nuget_upgrade_master"
     ignore:
       # Ignore updates to packages that start with 'Wildcards'
       - dependency-name: "Microsoft.FeatureManagement.AspNetCore*"
@@ -35,7 +35,7 @@ updates:
     directory: "/DigitalLearningSolutions.Web/" # Location of package manifests
     schedule:
       interval: "daily"
-    target-branch: "ci_npm_upgrade_master"
+    #target-branch: "ci_npm_upgrade_master"
     # Labels on pull requests for version updates only
     #labels:
     #  - "npm update dependabot"
