--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -12,6 +12,9 @@ jobs:
         with:
           dotnet-version: 6.0.x
 
+      - name: Clear NuGet Cache
+        run:  nuget locals all -clear
+
       - name: Add TechnologyEnhancedLearning as nuget package source
         run: dotnet nuget add source https://pkgs.dev.azure.com/e-LfH/_packaging/LearningHubFeed/nuget/v3/index.json --name TechnologyEnhancedLearning --username 'kevin.whittaker' --password ${{ secrets.AZURE_DEVOPS_PAT }} --store-password-in-clear-text
 
