--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -13,7 +13,7 @@ jobs:
           dotnet-version: 6.0.x
 
       - name: Add TechnologyEnhancedLearning as nuget package source
-        run: dotnet nuget add source https://pkgs.dev.azure.com/e-LfH/_packaging/LearningHubFeed/nuget/v3/index.json --name TechnologyEnhancedLearning --username 'binon.yesudhas' --password ${{ secrets.BinonDependabotPAT }} --store-password-in-clear-text
+        run: dotnet nuget add source https://pkgs.dev.azure.com/e-LfH/_packaging/LearningHubFeed/nuget/v3/index.json --name TechnologyEnhancedLearning --username 'kevin.whittaker' --password ${{ secrets.AZURE_DEVOPS_PAT }} --store-password-in-clear-text
 
       - name: Dotnet build
         run: dotnet build DigitalLearningSolutions.sln
