--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -36,7 +36,7 @@ updates:
     schedule:
       interval: "daily"
     # Increase the version requirements for Composer only when required
-    versioning-strategy: increase-if-necessary
+    versioning-strategy: increase
     target-branch: "ci_npm_upgrade_master"
     # Labels on pull requests for version updates only
     labels:
