--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -6,41 +6,23 @@ on:
       - opened
       - synchronize
       - reopened
-      - closed
 
 jobs:
   auto-merge:
     if: github.actor == 'dependabot[bot]'
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
+      - name: Print PR Information
+        run: echo "Actor: ${{ github.actor }}, Title: ${{ github.event.pull_request.title }}"
+
       - name: Check PR Title for Minor or Patch
         id: check_update_type
-        shell: pwsh
         run: |
-          $prTitle = "${{ github.event.pull_request.title }}"
-          Write-Output "PR title: $prTitle"
-          if ($prTitle -match "(minor|patch)") {
-              Write-Output "PR matches criteria"
-              "should_merge=true" | Out-File -FilePath $env:GITHUB_ENV -Append
-          } else {
-              Write-Output "PR does not match criteria"
-              "should_merge=false" | Out-File -FilePath $env:GITHUB_ENV -Append
-          }
-
-      - name: Check CI Status
-        if: env.should_merge == 'true'
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const { data: checkRuns } = await github.checks.listForRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: context.payload.pull_request.head.sha,
-            });
-            if (!checkRuns.check_runs.every(check => check.conclusion === "success")) {
-              throw new Error("CI checks failed");
-            }
+          if [[ "${{ github.event.pull_request.title }}" =~ (minor|patch) ]]; then
+            echo "should_merge=true" >> $GITHUB_ENV
+          else
+            echo "should_merge=false" >> $GITHUB_ENV
 
       - name: Merge Pull Request
         if: env.should_merge == 'true'
@@ -52,4 +34,4 @@ jobs:
               repo: context.repo.repo,
               pull_number: context.payload.pull_request.number,
               merge_method: "squash",
-            });
+            })
