--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -9,12 +9,12 @@ on:
 
 jobs:
   auto-merge:
-    if: github.actor == 'dependabot[bot]'
+    if: github.actor == 'dependabot[bot]' # Ensure this condition is valid and properly placed
     runs-on: ubuntu-latest
 
     steps:
       - name: Print PR Information
-        run: echo "Actor: ${{ github.actor }}, Title: ${{ github.event.pull_request.title }}"
+        run: echo "Actor:B"
 
       - name: Check PR Title for Minor or Patch
         id: check_update_type
@@ -25,7 +25,7 @@ jobs:
             echo "should_merge=false" >> $GITHUB_ENV
 
       - name: Merge Pull Request
-        if: env.should_merge == 'true'
+        if: env.should_merge == 'true' # Ensure this is properly indented and aligned
         uses: actions/github-script@v6
         with:
           script: |
