--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -6,19 +6,29 @@ on:
       - opened
       - synchronize
       - reopened
-      - closed
+
+permissions:
+  pull-requests: write
+  contents: write
+
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-
+   
     steps:
+      - name: Debug Context
+        uses: actions/github-script@v6
+        with:
+          script: |
+            console.log(context.payload);
+      
       - name: Merge Pull Request
         uses: actions/github-script@v6
         with:
           script: |
-            github.pulls.merge({
+            github.rest.pulls.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.payload.pull_request.number,
-              merge_method: "squash",
-            })
+              merge_method: "squash"
+            });
