--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,4 +1,4 @@
-name: Auto Merge Dependabot PRs
+name: Auto Merge Dependabot PRs to Develop
 
 on:
   pull_request:
@@ -14,15 +14,24 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-   
+
     steps:
+      - name: Check Target Branch
+        id: check_branch
+        run: |
+          if [[ "${{ github.event.pull_request.base.ref }}" == "ci_nuget_upgrade_master" ]]; then
+            echo "should_merge=true" >> $GITHUB_ENV
+          else
+            echo "should_merge=false" >> $GITHUB_ENV
+
       - name: Debug Context
         uses: actions/github-script@v6
         with:
           script: |
-            console.log(context.payload);
-      
+            console.log("Target branch:", context.payload.pull_request.base.ref);
+
       - name: Merge Pull Request
+        if: env.should_merge == 'true'
         uses: actions/github-script@v6
         with:
           script: |
