--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Check Target Branch
         id: check_branch
         run: |
-          PR_TITLE="${{ github.event.pull_request.title }}"
+          PR_TITLE='${{ github.event.pull_request.title }}'
           # Escape problematic quotes
           ESCAPED_TITLE=$(echo "$PR_TITLE" | sed 's/"/\\"/g')
 
