--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -23,10 +23,9 @@ jobs:
           PR_TITLE='${{ github.event.pull_request.title }}'
           # Escape problematic quotes
           ESCAPED_TITLE=$(echo "$PR_TITLE" | sed 's/"/\\"/g')
-          echo "ESCAPED TITLE: $ESCAPED_TITLE"
-          console.log("ESCAPED TITLE:", process.env.ESCAPED_TITLE)
-          
+        
           if [[ "${{ github.event.pull_request.base.ref }}" == "master" ]] && [[ "$ESCAPED_TITLE" =~ (minor|patch) ]]; then
+            echo "should_merge=true" >> $GITHUB_ENV
           else
             echo "should_merge=false" >> $GITHUB_ENV
           fi
