--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -58,7 +58,7 @@ jobs:
             echo "should_merge=false" >> $GITHUB_ENV
           fi
           
-          console.log("can I merge?:", ${{ env.should_merge}});
+          echo "can I merge?: ${{ env.should_merge }}"
           
           if [[ "${{ github.event.pull_request.base.ref }}" == "master" ]] &&  ${{ env.should_merge == 'true' }} ; then
             echo "should_merge=true" >> $GITHUB_ENV
