Revert "Revert "Revert "Revert "Bump Microsoft.Data.SqlClient from 2.1.2 to 2.1.7 in /DigitalLearningSolutions.Data.Tests"""" (#288)
* Revert "Revert "Revert "Revert "Bump Microsoft.Data.SqlClient from 2.1.2 to 2…"

This reverts commit 650804b4bfd06333bc15e5ee7227053f9f9293be.

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

* Update auto-merge.yml

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -17,23 +17,66 @@ jobs:
     if: github.actor == 'binon'
 
     steps:
-      - name: Check Target Branch
+      - name: Check Target Branch and PR Title
         id: check_branch
         run: |
-          if [[ "${{ github.event.pull_request.base.ref }}" == "master" ]] && [[ "${{ github.event.pull_request.title }}" =~ (minor|patch) ]]; then
-            echo "should_merge=true" >> $GITHUB_ENV
+          PR_TITLE='${{ github.event.pull_request.title }}'
+          echo "Original PR Title: $PR_TITLE"
+          
+          # Escape problematic quotes
+          ESCAPED_TITLE=$(echo "$PR_TITLE" | sed 's/"/\\"/g')
+          echo "Escaped PR Title: $ESCAPED_TITLE"
+
+          if [[ "$ESCAPED_TITLE" =~ ([0-9]+\.[0-9]+\.[0-9]+).*to.*([0-9]+\.[0-9]+\.[0-9]+) ]]; then
+            # Extract version numbers
+            OLD_VERSION="${BASH_REMATCH[1]}"
+            NEW_VERSION="${BASH_REMATCH[2]}"
+            echo "Version change detected: $OLD_VERSION to $NEW_VERSION"
+            
+            # Split version into major, minor, patch components
+            OLD_MAJOR=$(echo "$OLD_VERSION" | cut -d '.' -f1)
+            OLD_MINOR=$(echo "$OLD_VERSION" | cut -d '.' -f2)
+            OLD_PATCH=$(echo "$OLD_VERSION" | cut -d '.' -f3)
+            
+            NEW_MAJOR=$(echo "$NEW_VERSION" | cut -d '.' -f1)
+            NEW_MINOR=$(echo "$NEW_VERSION" | cut -d '.' -f2)
+            NEW_PATCH=$(echo "$NEW_VERSION" | cut -d '.' -f3)
+            
+            # Check if it's a minor or patch update
+            if [[ "$OLD_MAJOR" == "$NEW_MAJOR" ]] && [[ "$OLD_MINOR" == "$NEW_MINOR" ]] && [[ "$NEW_PATCH" -gt "$OLD_PATCH" ]]; then
+              echo "Patch update detected"
+              echo "should_merge=true" >> $GITHUB_ENV
+            elif [[ "$OLD_MAJOR" == "$NEW_MAJOR" ]] && [[ "$NEW_MINOR" -gt "$OLD_MINOR" ]]; then
+              echo "Minor update detected"
+              echo "should_merge=true" >> $GITHUB_ENV
+            else
+              echo "No minor/patch update detected"
+              echo "should_merge=false" >> $GITHUB_ENV
+            fi
           else
+            echo "No version change detected"
             echo "should_merge=false" >> $GITHUB_ENV
           fi
-          
+
       - name: Debug Context
         uses: actions/github-script@v6
         with:
           script: |
             console.log("Target branch:", context.payload.pull_request.base.ref);
 
+      - name: Check if Should Merge
+        run: |
+          echo "DEBUG: should_merge=${{ env.should_merge }}"
+          if [[ "${{ env.should_merge }}" == "true" ]] && [[ "${{ github.event.pull_request.base.ref }}" == "master" ]]; then
+            echo "DEBUG: should merge PR"
+            echo "should_merge=true" >> $GITHUB_ENV
+          else
+            echo "DEBUG: skip merge"
+            echo "should_merge=false" >> $GITHUB_ENV
+          fi
+
       - name: Merge Pull Request
-        if: env.should_merge == 'true'
+        if: ${{ env.should_merge == 'true' }}
         uses: actions/github-script@v6
         with:
           script: |
@@ -42,4 +85,4 @@ jobs:
               repo: context.repo.repo,
               pull_number: context.payload.pull_request.number,
               merge_method: "squash"
-            });            
+            });
