--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -35,8 +35,8 @@ jobs:
           PR_NUMBER=${{ github.event.pull_request.number }}
           echo "Checking CI status for PR #$PR_NUMBER"
           
-           # Fetch the latest commit status to ensure CI passed before proceeding with merge
-          CI_STATUS=$(gh pr view $PR_NUMBER --json statusCheckRollup --jq '.statusCheckRollup.state')
+          # Fetch the check runs associated with the PR to ensure CI passed before proceeding with merge
+          CI_STATUS=$(gh pr view $PR_NUMBER --json statusCheckRollup --jq '.statusCheckRollup.checks')
           
           # Ensure GitHub CLI is authenticated with the GitHub token
           echo "CI Status: $CI_STATUS"
