--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,11 +1,6 @@
 name: Auto Merge Dependabot PRs
 
-on:
-  pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
+on: [pull_request]
 
 permissions:
   pull-requests: write
