--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 1
-    target-branch: "ci_nuget_upgrade_master"
+    target-branch: "Automatic_version_update_dependabot"
     ignore:
       # Ignore updates to packages that start with 'Wildcards'
       #- dependency-name: "Microsoft.FeatureManagement.AspNetCore*"
@@ -37,7 +37,7 @@ updates:
       interval: "daily"
     # Increase the version requirements for Composer only when required
     # versioning-strategy: increase-if-necessary
-    target-branch: "ci_npm_upgrade_master"
+    target-branch: "Automatic_version_update_dependabot"
     # Labels on pull requests for version updates only
     labels:
       - "npm update dependabot"
