--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -9,9 +9,12 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    if: github.actor == 'dependabot[bot]'
-
+    
     steps:
+      - name: Log Event Data
+          echo "Triggered by ${{ github.actor }}"      
+        if: github.actor == 'dependabot[bot]'
+    
       - name: Checkout the repository
         uses: actions/checkout@v3
         
