--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -11,4 +11,22 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0.x
+       
+      - name: Add TechnologyEnhancedLearning as nuget package source
+        run: dotnet nuget add source https://pkgs.dev.azure.com/e-LfH/_packaging/LearningHubFeed/nuget/v3/index.json --name TechnologyEnhancedLearning --username 'kevin.whittaker' --password ${{ secrets.AZURE_DEVOPS_PAT }} --store-password-in-clear-text
+
+      - name: Dotnet build
+        run: dotnet build DigitalLearningSolutions.sln
+
+      - name: Dotnet test
+        run: dotnet test DigitalLearningSolutions.Web.Tests
+
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Typescript install
+        run: yarn install --network-timeout 600000 --frozen-lockfile
+        working-directory: ./DigitalLearningSolutions.Web
      
